# DearJack

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  INSTALL  Makefile  README  cmake_install.cmake  imgui.ini
.cache/clangd/index/: imconfig.h.C78AF779FB3ED691.idx  imgui.cpp.F3E66A427D64C6C3.idx  imgui.h.04DC77995E5FF3AB.idx  imgui_demo.cpp.6A91841A52C498B4.idx  imgui_draw.cpp.6D2A6CFEF3DC9A74.idx  imgui_impl_glfw.cpp.80EE743269E96168.idx  imgui_impl_glfw.h.0D5043CC2E77F721.idx  imgui_impl_opengl3.cpp.A0CB0E6AD1BBF4D9.idx  imgui_impl_opengl3.h.87C240EACFCDD350.idx  imgui_impl_opengl3_loader.h.146766F325672D08.idx  imgui_internal.h.D51166ACA6B1FC01.idx  imgui_tables.cpp.7D594BEC1CA9FF3E.idx  imgui_widgets.cpp.966E3DB1BD84E4A0.idx  imstb_rectpack.h.C2A7C7353BD3EED0.idx  imstb_textedit.h.7768CB8EEAEF5085.idx  imstb_truetype.h.5AE1247E9D077A8E.idx  jack.h.9E95F4D3A866BD34.idx  main.cpp.8DEF036A3A21D37F.idx  systemdeps.h.E90382A688E6C255.idx  transport.h.E74DF22ACF78C884.idx  types.h.FCC3875D55933F76.idx  weakmacros.h.FBE9BE4166F6E0EC.idx
build2/: imgui.ini
src/: CMakeLists.txt  main.cpp
